--- a/ProfSite/ProfSite.csproj
+++ b/ProfSite/ProfSite.csproj
@@ -310,8 +310,6 @@
     <Content Include="bin\DotNetOpenAuth.OpenIdOAuth.dll" />
     <Content Include="bin\EntityFramework.dll" />
     <Content Include="bin\EntityFramework.SqlServer.dll" />
-    <Content Include="bin\EntityFramework.SqlServer.xml" />
-    <Content Include="bin\EntityFramework.xml" />
     <Content Include="bin\es\ProfSite.resources.dll" />
     <Content Include="bin\fr\ProfSite.resources.dll" />
     <Content Include="bin\it\ProfSite.resources.dll" />
@@ -319,7 +317,6 @@
     <Content Include="bin\LFW20.FrontEnd.dll" />
     <Content Include="bin\LFW20.XML.dll" />
     <Content Include="bin\log4net.dll" />
-    <Content Include="bin\Merck.Security.LFW20.ExternalLogin.dll" />
     <Content Include="bin\Merck.Security.LFW20.HttpModule.FrontEnd.dll" />
     <Content Include="bin\Merck.Security.LFW20.HttpModule.FrontEnd.Mock.dll" />
     <Content Include="bin\Merck.Security.LFW20.HttpModule.FrontEnd.MVC.dll" />
@@ -328,54 +325,31 @@
     <Content Include="bin\Merck.WebTooling.HttpModules.LFW20.Frontend.dll" />
     <Content Include="bin\Merck.WebTooling.HttpModules.LFW20.MVC.dll" />
     <Content Include="bin\Microsoft.AspNet.Identity.Core.dll" />
-    <Content Include="bin\Microsoft.AspNet.Identity.Core.xml" />
     <Content Include="bin\Microsoft.AspNet.Identity.EntityFramework.dll" />
-    <Content Include="bin\Microsoft.AspNet.Identity.EntityFramework.xml" />
     <Content Include="bin\Microsoft.AspNet.Identity.Owin.dll" />
-    <Content Include="bin\Microsoft.AspNet.Identity.Owin.xml" />
-    <Content Include="bin\Microsoft.Contracts.dll" />
     <Content Include="bin\Microsoft.Owin.dll" />
     <Content Include="bin\Microsoft.Owin.Host.SystemWeb.dll" />
-    <Content Include="bin\Microsoft.Owin.Host.SystemWeb.xml" />
     <Content Include="bin\Microsoft.Owin.Security.Cookies.dll" />
-    <Content Include="bin\Microsoft.Owin.Security.Cookies.xml" />
     <Content Include="bin\Microsoft.Owin.Security.dll" />
     <Content Include="bin\Microsoft.Owin.Security.Facebook.dll" />
-    <Content Include="bin\Microsoft.Owin.Security.Facebook.xml" />
     <Content Include="bin\Microsoft.Owin.Security.Google.dll" />
-    <Content Include="bin\Microsoft.Owin.Security.Google.xml" />
     <Content Include="bin\Microsoft.Owin.Security.MicrosoftAccount.dll" />
-    <Content Include="bin\Microsoft.Owin.Security.MicrosoftAccount.xml" />
     <Content Include="bin\Microsoft.Owin.Security.OAuth.dll" />
-    <Content Include="bin\Microsoft.Owin.Security.OAuth.xml" />
     <Content Include="bin\Microsoft.Owin.Security.Twitter.dll" />
-    <Content Include="bin\Microsoft.Owin.Security.Twitter.xml" />
-    <Content Include="bin\Microsoft.Owin.Security.xml" />
-    <Content Include="bin\Microsoft.Owin.xml" />
     <Content Include="bin\Microsoft.Web.Infrastructure.dll" />
-    <Content Include="bin\Mono.Math.dll" />
     <Content Include="bin\Newtonsoft.Json.dll" />
-    <Content Include="bin\Newtonsoft.Json.xml" />
     <Content Include="bin\nl\ProfSite.resources.dll" />
-    <Content Include="bin\Org.Mentalis.Security.Cryptography.dll" />
     <Content Include="bin\Owin.dll" />
     <Content Include="bin\ProfSite.dll" />
     <Content Include="bin\ProfSite.pdb" />
     <Content Include="bin\SecureBinaries.dll" />
     <Content Include="bin\System.Web.Helpers.dll" />
-    <Content Include="bin\System.Web.Helpers.xml" />
     <Content Include="bin\System.Web.Mvc.dll" />
-    <Content Include="bin\System.Web.Mvc.xml" />
     <Content Include="bin\System.Web.Optimization.dll" />
-    <Content Include="bin\System.Web.Optimization.xml" />
     <Content Include="bin\System.Web.Razor.dll" />
-    <Content Include="bin\System.Web.Razor.xml" />
     <Content Include="bin\System.Web.WebPages.Deployment.dll" />
-    <Content Include="bin\System.Web.WebPages.Deployment.xml" />
     <Content Include="bin\System.Web.WebPages.dll" />
     <Content Include="bin\System.Web.WebPages.Razor.dll" />
-    <Content Include="bin\System.Web.WebPages.Razor.xml" />
-    <Content Include="bin\System.Web.WebPages.xml" />
     <Content Include="bin\WebGrease.dll" />
     <Content Include="components\customdropdown.html" />
     <Content Include="components\datepicker.html" />
@@ -411,6 +385,7 @@
     <Content Include="Content\fonts\rotis_sansserif_std_light.svg" />
     <Content Include="Content\img\adherence-icon.jpg" />
     <Content Include="Content\img\adherence.jpg" />
+    <Content Include="Content\img\FB-icon.png" />
     <Content Include="Content\img\generalFile.png" />
     <Content Include="Content\img\glyphicons-halflings-white.png" />
     <Content Include="Content\img\header.jpg" />
@@ -420,6 +395,8 @@
     <Content Include="Content\img\progressbar.gif" />
     <Content Include="Content\img\support-icon.jpg" />
     <Content Include="Content\img\support.jpg" />
+    <Content Include="Content\img\twitter-icon.jpg" />
+    <Content Include="Content\img\twitter-icon.png" />
     <Content Include="Content\img\video.jpg" />
     <Content Include="Content\main.css" />
     <Content Include="Content\main2.css" />
@@ -634,7 +611,6 @@
     <Content Include="Content\fonts\rotis_sansserif_std_light.ttf" />
     <Content Include="Content\fonts\rotis_sansserif_std_light.woff" />
     <Content Include="docs\Bravecto_SPC-PIL_en.pdf" />
-    <Content Include="Images\Í.textClipping" />
     <Content Include="docs\BravoVets-content-walkThrough.pdf" />
     <Content Include="docs\Bravecto_SPC-PIL_es.pdf" />
     <Content Include="docs\Bravecto_SPC-PIL_fr.pdf" />
@@ -707,7 +683,6 @@
     <Content Include="Scripts\locales\it-IT.js" />
     <Content Include="Scripts\locales\nl-NL.js" />
     <Content Include="Scripts\locales\pt-PT.js" />
-    <Content Include="Scripts\locales\ru-RU.js" />
     <Content Include="Scripts\modernizr.js" />
     <Content Include="Scripts\read-more-modal.js" />
     <Content Include="Scripts\respond.js" />
