rename profsiteus solution to avoid deploy conflict

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -3,5 +3,6 @@
   <repository path="..\BravoVets.Dal\packages.config" />
   <repository path="..\ProfSite.Tests\packages.config" />
   <repository path="..\ProfSite\packages.config" />
+  <repository path="..\ProfSiteUS\packages.config" />
   <repository path="..\TestHelper\packages.config" />
 </repositories>
