--- a/ProfSite/Web.Release.config
+++ b/ProfSite/Web.Release.config
@@ -14,8 +14,14 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
+  <connectionStrings>
+    <add name="BravoVetsDbEntities" 
+         connectionString="metadata=res://*/BravoVetsSql.csdl|res://*/BravoVetsSql.ssdl|res://*/BravoVetsSql.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=t3uargy2x5.database.windows.net;Initial Catalog=bravovetsdb;Integrated Security=False;User ID=visualmercbravovets;Password=Visualmercsql2015;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False&quot;" 
+         providerName="System.Data.EntityClient" xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
+  </connectionStrings>
   <system.web>
-    <compilation xdt:Transform="RemoveAttributes(debug)" />
+    <!--<compilation xdt:Transform="RemoveAttributes(debug)" />-->
+    <customErrors mode="Off" xdt:Transform="Insert" />
     <!--
       In the example below, the "Replace" transform will replace the entire
       <customErrors> section of your Web.config file.
