facebook and twitter

--- a/ProfSite/ProfSite.csproj
+++ b/ProfSite/ProfSite.csproj
@@ -387,7 +387,26 @@
     <Content Include="Content\img\aboutusheader.jpg" />
     <Content Include="Content\img\adherence-icon.jpg" />
     <Content Include="Content\img\adherence.jpg" />
+    <Content Include="Content\img\clock_anim_00.png" />
+    <Content Include="Content\img\clock_anim_01.png" />
+    <Content Include="Content\img\clock_anim_02.png" />
+    <Content Include="Content\img\clock_anim_03.png" />
+    <Content Include="Content\img\clock_anim_04.png" />
+    <Content Include="Content\img\clock_anim_05.png" />
+    <Content Include="Content\img\clock_anim_06.png" />
+    <Content Include="Content\img\clock_anim_07.png" />
+    <Content Include="Content\img\clock_anim_08.png" />
+    <Content Include="Content\img\clock_anim_09.png" />
+    <Content Include="Content\img\clock_anim_10.png" />
+    <Content Include="Content\img\clock_anim_11.png" />
+    <Content Include="Content\img\clock_anim_12.png" />
+    <Content Include="Content\img\clock_anim_blur01.png" />
+    <Content Include="Content\img\clock_anim_blur10.png" />
+    <Content Include="Content\img\clock_anim_blur11.png" />
+    <Content Include="Content\img\linkedaccounts-bottom.jpg" />
+    <Content Include="Content\img\linkedaccounts-top.jpg" />
     <Content Include="Content\img\extralargedogs.png" />
+    <Content Include="Content\img\fb-icon-lg.png" />
     <Content Include="Content\img\largedogs.png" />
     <Content Include="Content\img\mediumsizeddogs.png" />
     <Content Include="Content\img\productsheader.jpg" />
@@ -404,6 +423,7 @@
     <Content Include="Content\img\support-icon.jpg" />
     <Content Include="Content\img\support.jpg" />
     <Content Include="Content\img\toydogs.jpg" />
+    <Content Include="Content\img\twitter-icon-lg.png" />
     <Content Include="Content\img\twitter-icon.jpg" />
     <Content Include="Content\img\twitter-icon.png" />
     <Content Include="Content\img\video.jpg" />
