resources page and contact us todo dynamic data

--- a/ProfSite/ProfSite.csproj
+++ b/ProfSite/ProfSite.csproj
@@ -390,6 +390,7 @@
     <Content Include="Content\img\aboutusheader.jpg" />
     <Content Include="Content\img\adherence-icon.jpg" />
     <Content Include="Content\img\adherence.jpg" />
+    <Content Include="Content\img\Bravecto_ContactUs_header.jpg" />
     <Content Include="Content\img\Bravecto_FB Message_sidebarimg1.jpg" />
     <Content Include="Content\img\Bravecto_Support_greenbgimg.jpg" />
     <Content Include="Content\img\Bravecto_Support_img2.jpg" />
