moving things around to go under bravovets new page profile and reskin of sitemap

--- a/ProfSite/ProfSite.csproj
+++ b/ProfSite/ProfSite.csproj
@@ -375,6 +375,7 @@
     <Content Include="Content\blocks-custom.css" />
     <Content Include="Content\bravectohome.css" />
     <Content Include="Content\bravopets.css" />
+    <Content Include="Content\bravovets.css" />
     <Content Include="Content\calendartemplate\day.html" />
     <Content Include="Content\fileupload\jquery.fileupload-ui-noscript.css" />
     <Content Include="Content\fileupload\jquery.fileupload-ui.css" />
@@ -770,7 +771,7 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\BravoVets\Dashboard.cshtml" />
     <Content Include="Views\Bravecto\Home.cshtml" />
-    <Content Include="Views\Bravecto\Innovation.cshtml" />
+    <Content Include="Views\BravoVets\innovation.cshtml" />
     <Content Include="Views\BravoVets\TermsAndConditions.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\BravoVets\SelectCountry.cshtml" />
@@ -899,29 +900,31 @@
     <Content Include="Views\Globalization\es-ES\Twitter\TimelineError.cshtml" />
     <Content Include="Views\Globalization\es-ES\Twitter\Tweet.cshtml" />
     <Content Include="Views\Bravecto\index.cshtml" />
-    <Content Include="Views\Bravecto\about-us.cshtml" />
+    <Content Include="Views\BravoVets\about-us.cshtml" />
     <Content Include="Views\Shared\_LayoutBravecto.cshtml" />
-    <Content Include="Views\Bravecto\facebook.cshtml" />
-    <Content Include="Views\Bravecto\twitter.cshtml" />
-    <Content Include="Views\Bravecto\social-content.cshtml" />
-    <Content Include="Views\Bravecto\products.cshtml" />
-    <Content Include="Views\Bravecto\linked-accounts.cshtml" />
-    <Content Include="Views\Bravecto\Partials\_Tweet.cshtml" />
-    <Content Include="Views\Bravecto\Partials\_TimelineItem.cshtml" />
-    <Content Include="Views\Bravecto\Partials\StatusUpdate.cshtml" />
-    <Content Include="Views\Bravecto\Partials\LinkUpdate.cshtml" />
-    <Content Include="Views\Bravecto\Partials\PhotoUpdate.cshtml" />
-    <Content Include="Views\Bravecto\Partials\VideoUpdate.cshtml" />
-    <Content Include="Views\Bravecto\Partials\Comment.cshtml" />
-    <Content Include="Views\Bravecto\Partials\Comments.cshtml" />
-    <Content Include="Views\Bravecto\contact-us.cshtml" />
-    <Content Include="Views\Bravecto\unlinked-accounts.cshtml" />
-    <Content Include="Views\Bravecto\support.cshtml" />
-    <Content Include="Views\Bravecto\resources.cshtml" />
+    <Content Include="Views\BravoVets\facebookfeed.cshtml" />
+    <Content Include="Views\BravoVets\twitterfeed.cshtml" />
+    <Content Include="Views\BravoVets\social-content.cshtml" />
+    <Content Include="Views\BravoVets\products.cshtml" />
+    <Content Include="Views\BravoVets\linked-accounts.cshtml" />
+    <Content Include="Views\BravoVets\Partials\_Tweet.cshtml" />
+    <Content Include="Views\BravoVets\Partials\_TimelineItem.cshtml" />
+    <Content Include="Views\BravoVets\Partials\StatusUpdate.cshtml" />
+    <Content Include="Views\BravoVets\Partials\LinkUpdate.cshtml" />
+    <Content Include="Views\BravoVets\Partials\PhotoUpdate.cshtml" />
+    <Content Include="Views\BravoVets\Partials\VideoUpdate.cshtml" />
+    <Content Include="Views\BravoVets\Partials\Comment.cshtml" />
+    <Content Include="Views\BravoVets\Partials\Comments.cshtml" />
+    <Content Include="Views\BravoVets\contact-us.cshtml" />
+    <Content Include="Views\BravoVets\unlinked-accounts.cshtml" />
+    <Content Include="Views\BravoVets\support.cshtml" />
+    <Content Include="Views\BravoVets\resources.cshtml" />
     <Content Include="Views\Shared\_LayoutBravoPets.cshtml" />
     <Content Include="Views\Bravopets\index.cshtml" />
     <Content Include="Views\BravoVets\index.cshtml" />
-    <Content Include="Views\Bravecto\Partials\_Timeline.cshtml" />
+    <Content Include="Views\BravoVets\Partials\_Timeline.cshtml" />
+    <Content Include="Views\Shared\_LayoutBravovets.cshtml" />
+    <Content Include="Views\BravoVets\adherence.cshtml" />
     <None Include="Web.Dev.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
