--- a/ProfSite/Web.config
+++ b/ProfSite/Web.config
@@ -226,8 +226,8 @@
 
     <httpModules>
       <!-- LFW http module -->
-      <!--<add name="Frontend" type="Merck.WebTooling.HttpModules.LFW20.Frontend, Merck.WebTooling.HttpModules.LFW20.Frontend, Version=1.3.2.1, Culture=neutral, PublicKeyToken=CF74EAE0D6C1F324" />
-      <add name="MVCFrontend" type="Merck.WebTooling.HttpModules.LFW20.MVC.Frontend, Merck.WebTooling.HttpModules.LFW20.MVC, Version=1.3.2.1, Culture=neutral, PublicKeyToken=CF74EAE0D6C1F324" />-->
+      <!--<add name="Frontend" type="Merck.WebTooling.HttpModules.LFW20.Frontend, Merck.WebTooling.HttpModules.LFW20.Frontend, Version=1.3.2.1, Culture=neutral, PublicKeyToken=CF74EAE0D6C1F324" />-->
+      <add name="MVCFrontend" type="Merck.WebTooling.HttpModules.LFW20.MVC.Frontend, Merck.WebTooling.HttpModules.LFW20.MVC, Version=1.3.2.1, Culture=neutral, PublicKeyToken=CF74EAE0D6C1F324" />
       <!-- End LFW http module -->
       <!--<add name="MetaTagTrackingModule" type="Merck.WebTooling.HttpModules.Tracking.MetaTagTrackingModule, Merck.WebTooling.HttpModules.Tracking, Version=1.0.0.0, Culture=neutral, PublicKeyToken=cf74eae0d6c1f324"/>-->
     </httpModules>
