--- a/ProfSite/Web.Release.config
+++ b/ProfSite/Web.Release.config
@@ -19,6 +19,12 @@
          connectionString="metadata=res://*/BravoVetsSql.csdl|res://*/BravoVetsSql.ssdl|res://*/BravoVetsSql.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=t3uargy2x5.database.windows.net;Initial Catalog=bravovetsdb;Integrated Security=False;User ID=visualmercbravovets;Password=Visualmercsql2015;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False&quot;" 
          providerName="System.Data.EntityClient" xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
   </connectionStrings>
+  <!--Remove when delivering-->
+  <appSettings>
+    <add xdt:Transform="SetAttributes" xdt:Locator="Match(key)" key="facebook.en.appid" value="437775256401079" />
+    <add xdt:Transform="SetAttributes" xdt:Locator="Match(key)" key="facebook.en.appSecret" value="48e72d6671cdc836994175497cbedce6" />
+    <add xdt:Transform="SetAttributes" xdt:Locator="Match(key)" key="facebook.en.redirectUrl" value="http://bravovets.azurewebsites.net/facebook/oauth_callback" />
+  </appSettings>
   <system.web>
     <!--<compilation xdt:Transform="RemoveAttributes(debug)" />-->
     <customErrors mode="Off" xdt:Transform="Insert" />
