updated web config for facebook

--- a/ProfSite/Web.config
+++ b/ProfSite/Web.config
@@ -34,9 +34,13 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 
-    <add key="facebook.en.appid" value="826237174060376" />
+    <add key="facebook.en.appid" value="439769249535013" />
+    <add key="facebook.en.appSecret" value="c42addb27e33e50dbaca8e679520c6a3" />
+    <add key="facebook.en.redirectUrl" value="http://localhost:2480/facebook/oauth_callback" />
+
+    <!--<add key="facebook.en.appid" value="826237174060376" />
     <add key="facebook.en.appSecret" value="bcb996b2e5b72d5c73c63331772c392d" />
-    <add key="facebook.en.redirectUrl" value="http://bravovets.azurewebsites.net/facebook/oauth_callback" />
+    <add key="facebook.en.redirectUrl" value="http://localhost/facebook/oauth_callback" />-->
 
     <add key="facebook.fr.appid" value="661907020511970" />
     <add key="facebook.fr.appSecret" value="822b3481eefc0f2d7ad8ff834128ef7c" />
