--- a/ProfSite/bin/ProfSite.dll.config
+++ b/ProfSite/bin/ProfSite.dll.config
@@ -36,7 +36,7 @@
 
     <add key="facebook.en.appid" value="826237174060376" />
     <add key="facebook.en.appSecret" value="bcb996b2e5b72d5c73c63331772c392d" />
-    <add key="facebook.en.redirectUrl" value="http://localhost:2480/facebook/oauth_callback" />
+    <add key="facebook.en.redirectUrl" value="http://localhost/facebook/oauth_callback" />
 
     <add key="facebook.fr.appid" value="661907020511970" />
     <add key="facebook.fr.appSecret" value="822b3481eefc0f2d7ad8ff834128ef7c" />
@@ -78,7 +78,7 @@
     <add key="facebook.lat.appSecret" value="77134ce19f858d8c6d3763b8873ba0f6" /> 
     <add key="facebook.lat.redirectUrl" value="https://www.bravovets-latam.com/facebook/oauth_callback" /> 
 
-    <add key="twitter.en.oauth_callbackUrl" value="http://localhost:2480/twitter/oauth_callback" />
+    <add key="twitter.en.oauth_callbackUrl" value="http://bravovets.azurewebsites.net/twitter/oauth_callback" />
     <add key="twitter.en.consumer_key" value="QLzCTq81wqROCGB5NcBFg" />
     <add key="twitter.en.consumer_secret" value="07maM6ZQrKF8FB6gPG1a0Y2dhfwWAXE1MyBkDVlIsQ" />
 
